--- a/index.html
+++ b/index.html
@@ -71,8 +71,10 @@
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
               <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
+            <i class="fa-solid fa-heart p-2"></i>
+
             <i class="fa-solid fa-user p-2"></i>
-            <i class="fa-solid fa-cart-shopping"></i>
+            <i class="fa-solid fa-cart-shopping p-2"></i>
 
           </div>
         </div>
